--- a/index.html
+++ b/index.html
@@ -4,9 +4,356 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>4.12</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>IMTIXON</h1>
+    <main class="main">
+      <section class="hero">
+        <div class="hero-container container">
+          <a class="logo" href=""><img src="./images/logo.svg" alt="" /></a>
+          <div class="hero-info">
+            <div class="hero-left">
+              <h1 class="hero-heading">Join the ultimate tech book club</h1>
+              <p class="hero-paragraph">
+                Turn your reading time into learning time with fellow tech
+                enthusiasts. Get curated recommendations, join vibrant
+                discussions, and level up your skills one chapter at a time.
+              </p>
+              <button class="hero-button btn">
+                <span>REVIEW MEMBERSHIP OPTIONS</span>
+                <img src="./images/icon-arrow-down.svg" alt="" />
+              </button>
+              <div class="developers-container">
+                <img
+                  class="developers-image"
+                  src="./images/image-avatars.webp"
+                  alt=""
+                />
+                <div class="developers-text">
+                  <div class="developers-container-stars">
+                    <img src="./images/icon-star.svg" alt="" />
+                    <img src="./images/icon-star.svg" alt="" />
+                    <img src="./images/icon-star.svg" alt="" />
+                    <img src="./images/icon-star.svg" alt="" />
+                    <img src="./images/icon-star.svg" alt="" />
+                  </div>
+                  <p class="developers-paragraph">
+                    200+ developers joined already
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="hero-right">
+              <img
+                class="hero-right-img"
+                src="./images/image-hero-desktop.webp"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="reading">
+        <div class="reading-container container">
+          <div class="reading-left">
+            <img
+              class="reading-left-img"
+              src="./images/image-read-together-desktop.webp"
+              alt=""
+            />
+          </div>
+          <div class="reading-right">
+            <h2 class="reading-right-heading">Read together, grow together</h2>
+            <ul class="reading-schedule-list">
+              <li class="reading-schedule-item">
+                <img
+                  src="./images/icon-check.svg"
+                  alt=""
+                  class="reading-schedule-checked-icon"
+                />
+                <p class="reading-schedule-text">
+                  Monthly curated tech reads selected by industry experts
+                </p>
+              </li>
+              <li class="reading-schedule-item">
+                <img
+                  src="./images/icon-check.svg"
+                  alt=""
+                  class="reading-schedule-checked-icon"
+                />
+                <p class="reading-schedule-text">
+                  Virtual and in-person meetups for deep-dive discussions
+                </p>
+              </li>
+              <li class="reading-schedule-item">
+                <img
+                  src="./images/icon-check.svg"
+                  alt=""
+                  class="reading-schedule-checked-icon"
+                />
+                <p class="reading-schedule-text">
+                  Early access to new tech book releases
+                </p>
+              </li>
+              <li class="reading-schedule-item">
+                <img
+                  src="./images/icon-check.svg"
+                  alt=""
+                  class="reading-schedule-checked-icon"
+                />
+                <p class="reading-schedule-text">
+                  Author Q&A sessions with tech thought leaders
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="book-club">
+        <div class="book-club-container container">
+          <div class="book-club-left">
+            <h2 class="book-club-left-heading">
+              Not your average book club
+              <img
+                class="book-club-left-heading-circle"
+                src="./images/pattern-circle.png"
+                alt=""
+              />
+            </h2>
+            <p class="book-club-left-paragraph">
+              Connect with a community that speaks your language - from
+              <span class="book-club-left-paragraph-bold">Python</span>
+              to
+              <span class="book-club-left-paragraph-bold">TypeScript</span> and
+              everything in between. Our discussions blend technical depth with
+              practical applications.
+            </p>
+          </div>
+          <div class="book-club-right">
+            <img
+              class="book-club-right-img"
+              src="./images/image-not-average-desktop.webp"
+              alt=""
+            />
+            <img class="logos-tech" src="./images/logos-tech.svg" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="journey">
+        <div class="journey-container container">
+          <h2 class="journey-heading">Your tech reading journey</h2>
+          <div class="journey-cards-container">
+            <div class="journey-card">
+              <div class="journey-card-top">
+                <div class="journey-card-number-border">
+                  <h3 class="journey-card-number">1</h3>
+                </div>
+                <img
+                  src="./images/pattern-arrow.svg"
+                  alt=""
+                  class="journey-card-arrow"
+                />
+              </div>
+              <h4 class="journey-card-info">Choose your membership tier</h4>
+            </div>
+            <div class="journey-card">
+              <div class="journey-card-top">
+                <div class="journey-card-number-border">
+                  <h3 class="journey-card-number">2</h3>
+                </div>
+                <img
+                  src="./images/pattern-arrow.svg"
+                  alt=""
+                  class="journey-card-arrow"
+                />
+              </div>
+              <h4 class="journey-card-info">Get your monthly book selection</h4>
+            </div>
+            <div class="journey-card">
+              <div class="journey-card-top">
+                <div class="journey-card-number-border">
+                  <h3 class="journey-card-number">3</h3>
+                </div>
+                <img
+                  src="./images/pattern-arrow.svg"
+                  alt=""
+                  class="journey-card-arrow"
+                />
+              </div>
+              <h4 class="journey-card-info">Join our discussion forums</h4>
+            </div>
+            <div class="journey-card">
+              <div class="journey-card-top">
+                <div class="journey-card-number-border">
+                  <h3 class="journey-card-number">4</h3>
+                </div>
+              </div>
+              <h4 class="journey-card-info">Attend exclusive meetups</h4>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="membership">
+        <div class="membership-container container">
+          <h2 class="membership-heading">Membership options</h2>
+          <div class="membership-cards-container container">
+            <div class="membership-card">
+              <h3 class="membership-card-title">Starter</h3>
+              <div class="membership-card-price">
+                <h2 class="membership-card-price-number">$19</h2>
+                <p class="membership-card-price-month">/month</p>
+              </div>
+              <ul class="membership-card-offers">
+                <li class="membership-card-offers-item">
+                  <img
+                    class="membership-card-offers-icon"
+                    src="./images/icon-check.svg"
+                    alt=""
+                  />
+                  <p class="membership-card-offers-text">1 book/month</p>
+                </li>
+                <li class="membership-card-offers-item">
+                  <img
+                    class="membership-card-offers-icon"
+                    src="./images/icon-check.svg"
+                    alt=""
+                  />
+                  <p class="membership-card-offers-text">1 book/month</p>
+                </li>
+              </ul>
+              <button class="membership-card-btn btn">SUBSCRIBE NOW</button>
+            </div>
+            <div class="membership-card pro-card">
+              <h3 class="membership-card-title">Pro</h3>
+              <div class="membership-card-price">
+                <h2 class="membership-card-price-number">$29</h2>
+                <p class="membership-card-price-month">/month</p>
+              </div>
+              <ul class="membership-card-offers">
+                <li class="membership-card-offers-item">
+                  <img
+                    class="membership-card-offers-icon"
+                    src="./images/icon-check.svg"
+                    alt=""
+                  />
+                  <p class="membership-card-offers-text">2 books/month</p>
+                </li>
+                <li class="membership-card-offers-item">
+                  <img
+                    class="membership-card-offers-icon"
+                    src="./images/icon-check.svg"
+                    alt=""
+                  />
+                  <p class="membership-card-offers-text">Virtual meetups</p>
+                </li>
+              </ul>
+              <button class="membership-card-btn btn">SUBSCRIBE NOW</button>
+            </div>
+            <div class="membership-card">
+              <h3 class="membership-card-title">Enterprise</h3>
+              <div class="membership-card-price">
+                <h2 class="membership-card-price-number">Custom</h2>
+              </div>
+              <ul class="membership-card-offers">
+                <li class="membership-card-offers-item">
+                  <img
+                    class="membership-card-offers-icon"
+                    src="./images/icon-check.svg"
+                    alt=""
+                  />
+                  <p class="membership-card-offers-text">Team access</p>
+                </li>
+                <li class="membership-card-offers-item">
+                  <img
+                    class="membership-card-offers-icon"
+                    src="./images/icon-check.svg"
+                    alt=""
+                  />
+                  <p class="membership-card-offers-text">Private sessions</p>
+                </li>
+              </ul>
+              <button class="membership-card-btn btn">TALK TO US</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="five-stars">
+        <div class="five-stars-container container">
+          <div class="five-stars-icon">
+            <img src="./images/icon-star.svg" alt="" />
+            <img src="./images/icon-star.svg" alt="" />
+            <img src="./images/icon-star.svg" alt="" />
+            <img src="./images/icon-star.svg" alt="" />
+            <img src="./images/icon-star.svg" alt="" />
+          </div>
+          <h2 class="five-stars-headig">
+            "This book club transformed my technical reading from a solitary
+            activity into an enriching community experience. The discussions are
+            gold!"
+          </h2>
+          <p class="five-stars-paragraph">Sarah Chen, Software Architect</p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer-top">
+        <h2 class="footer-heading">Ready to debug your reading list?</h2>
+        <button class="footer-button btn">
+          <span>REVIEW MEMBERSHIP OPTIONS</span>
+          <img src="./images/icon-arrow-up.svg" alt="" />
+        </button>
+        <div class="developers-container">
+          <img
+            class="developers-image"
+            src="./images/image-avatars.webp"
+            alt=""
+          />
+          <div class="developers-text">
+            <div class="developers-container-stars">
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+            </div>
+            <p class="developers-paragraph">200+ developers joined already</p>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom container">
+        <h4 class="p-2024">&copy; 2024 - Tech Book Club</h4>
+        <div class="footer-bottom-icons-container">
+          <a class="footer-icon" href="">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="22"
+              height="23"
+              fill="none"
+              viewBox="0 0 22 23"
+            >
+              <path
+                fill="#fff"
+                d="M4.804 2.695c2.51 1.877 5.208 5.693 6.196 7.743.988-2.046 3.687-5.861 6.196-7.743 1.81-1.358 4.74-2.407 4.74.936 0 .666-.383 5.608-.606 6.411-.782 2.785-3.627 3.498-6.158 3.064 4.422.752 5.547 3.244 3.116 5.736-4.615 4.735-6.63-1.186-7.146-2.702-.073-.211-.112-.336-.142-.336-.03 0-.069.13-.142.336-.515 1.516-2.535 7.437-7.146 2.702-2.427-2.492-1.306-4.984 3.116-5.736-2.531.434-5.376-.28-6.153-3.068-.228-.804-.61-5.745-.61-6.411 0-3.343 2.93-2.294 4.739-.937v.005Z"
+              />
+            </svg>
+          </a>
+          <a class="footer-icon" href=""
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="18"
+              height="19"
+              fill="none"
+              viewBox="0 0 18 19"
+            >
+              <path
+                fill="#fff"
+                d="M16.25.772c.664 0 1.25.586 1.25 1.289v14.961c0 .703-.586 1.25-1.25 1.25H1.21c-.663 0-1.21-.547-1.21-1.25V2.061C0 1.358.547.772 1.21.772h15.04Zm-10.977 15v-8.32H2.695v8.32h2.578ZM3.984 6.28c.82 0 1.485-.664 1.485-1.485 0-.82-.664-1.523-1.485-1.523-.859 0-1.523.703-1.523 1.523S3.125 6.28 3.984 6.28ZM15 15.772v-4.57c0-2.227-.508-3.985-3.125-3.985-1.25 0-2.11.703-2.46 1.367h-.04V7.452h-2.46v8.32h2.577V11.67c0-1.093.195-2.148 1.563-2.148 1.328 0 1.328 1.25 1.328 2.188v4.062H15Z"
+              />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </footer>
     <script src="./app/app.js"></script>
   </body>
 </html>
