--- a/index.html
+++ b/index.html
@@ -316,7 +316,9 @@
               <img src="./images/icon-star.svg" alt="" />
               <img src="./images/icon-star.svg" alt="" />
             </div>
-            <p class="developers-paragraph">200+ developers joined already</p>
+            <p class="developers-paragraph" style="color: #fff">
+              200+ developers joined already
+            </p>
           </div>
         </div>
       </div>
